# microsoft-agent-hackathon-2026

./: .env.example  .gitignore  CLAUDE.md  Makefile  Procfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  servicebus-config.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  deploy.yml
apps/api/: .env.example  Dockerfile  biome.json  package.json  prisma.config.ts  tsconfig.build.json  vitest.config.ts
apps/api/prisma/: schema.prisma
apps/api/prisma/migrations/20260423033159_init/: migration.sql
apps/api/prisma/migrations/20260423120000_add_meeting_held_at_index/: migration.sql
apps/api/src/: app.ts  index.ts  types.ts
apps/api/src/lib/: prisma.ts  service-bus.ts
apps/api/src/routes/: meetings.ts
apps/api/test/: health.test.ts  meeting.test.ts  meetings.test.ts  service-bus.test.ts
apps/web/: Dockerfile  biome.json  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  main.tsx  routeTree.gen.ts
apps/web/src/components/ui/: button.tsx
apps/web/src/lib/: api.ts
apps/web/src/routes/: __root.tsx  index.tsx
apps/web/src/test/: App.test.tsx  api.test.ts  button.test.tsx  form.test.tsx  index.test.tsx  query.test.tsx  router.test.tsx  store.test.tsx  test-utils.tsx
apps/web/src/types/: meeting.ts
docs/: requirements.md
services/ai/: .env.example  Dockerfile  main.py  pyproject.toml
services/ai/consumers/: service_bus.py
services/ai/routers/: ws.py
services/ai/tests/: conftest.py  test_health.py  test_main_lifespan.py  test_service_bus.py  test_ws.py
templates/: ISSUE_TEMPLATE.md
