[project]
name = "ai-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "azure-servicebus>=7.14.3",
  "fastapi[standard]>=0.115.0",
]

[dependency-groups]
dev = [
  "ruff>=0.9.0",
  "mypy>=1.13.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.25.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
